[package]
name = "solana-copybot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
tokio-stream = "0.1"
base58 = "0.2"
borsh = "1"
borsh-derive = "1.5"
env_logger = "0.10"
itertools = "0.12"
lazy_static = "1"
num = "0.4"
num-bigint = "0.4"
reqwest = { version = "0.12", features = ["json", "gzip", "blocking", "native-tls"] }
rust_decimal = "1"
safe-transmute = "0.11"
serde_json = "1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
bs58 = "0.5"
strum = "0.26"
strum_macros = "0.26"
base64 = "0.21"
bincode = "1.3"
uuid = { version = "1", features = ["v4"] }
tower = "0.4"
hyper = { version = "0.14", features = ["client", "http1", "server", "tcp"] }
futures = "0.3"

http = "0.2"
http-body = "0.4"
bytes = "1"
futures-core = "0.3"
axum = "0.6"
tower-http = { version = "0.4", features = ["cors"] }
protobuf = "3.2.0"
rand = "0.8"
once_cell = "1.19"
solana-ws = "0.1"
tokio-tungstenite = { version = "0.20", default-features = false, features = ["tokio-native-tls"] }
url = "2"
futures-util = "0.3"

clap = { version = "4.5.4", features = ["derive"] }

# Jito SDK for bundle submission
jito-sdk-rust = "0.1"

# --- Solana 1.18 STACK (compatible with Jito Agave) ---
solana-account-decoder = "1.18"
solana-client = "1.18"
solana-pubsub-client = "1.18"
solana-program = "1.18"
solana-sdk = "1.18"
solana-transaction-status = "1.18"
solana-clap-utils = "1.18"

chrono = { version = "0.4", features = ["std", "serde"] }
async-trait = "0.1"

dashmap = "5"
lru = "0.12"
hex = "0.4"




# SPL libs (using crates.io versions to avoid compilation issues)
spl-token = { version = "4.0", default-features = false, features = ["no-entrypoint"] }
spl-token-2022 = { version = "1.0", default-features = false, features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.3", default-features = false, features = ["no-entrypoint"] }


# Yellowstone gRPC tooling
tonic = { version = "0.10", features = ["tls", "transport"] }
prost = "0.12"
prost-types = "0.12"
tokio = { version = "1.37", features = ["full"] }


[patch.crates-io]
curve25519-dalek = { git = "https://github.com/solana-labs/curve25519-dalek.git", rev = "debe843d33b99856686771d5635c24e06ccb76ca" }

[features]
default = []

[[bin]]
name = "bot"
path = "src/bin/bot.rs"

[[bin]]
name = "check_bundle_status"
path = "src/bin/check_bundle_status.rs"

[[bin]]
name = "check_tip_floor"
path = "src/bin/check_tip_floor.rs"

[[bin]]
name = "test_optimal_cu"
path = "src/bin/test_optimal_cu.rs"





[build-dependencies]
tonic-build = "0.11"
prost-build = "0.12"

[lib]
name = "copybot_ultimate_v2"
path = "src/lib.rs"
